--- a/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
+++ b/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "JournaLigne.Runtime",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:c6a25c179422a4d4ba7dd96cf207fe83"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
