--- a/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
+++ b/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:c6a25c179422a4d4ba7dd96cf207fe83"
+        "GUID:c6a25c179422a4d4ba7dd96cf207fe83",
+        "GUID:90d0a610f03bce142a2898f9aa3bbc6f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
