--- a/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
+++ b/Assets/_Project/Scripts/Runtime/JournaLigne.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c6a25c179422a4d4ba7dd96cf207fe83",
-        "GUID:90d0a610f03bce142a2898f9aa3bbc6f"
+        "GUID:90d0a610f03bce142a2898f9aa3bbc6f",
+        "GUID:751a28b299c72da48be4bee70349527e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
