--- a/Assets/Localization/Editor/Localization.Editor.asmdef
+++ b/Assets/Localization/Editor/Localization.Editor.asmdef
@@ -1,11 +1,13 @@
 {
-    "name": "Localization",
+    "name": "Localization.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6546d7765b4165b40850b3667f981c26"
+        "GUID:751a28b299c72da48be4bee70349527e"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
