[FIX] Load .Json In build

--- a/Assets/Localization/Editor/Localization.Editor.asmdef
+++ b/Assets/Localization/Editor/Localization.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:751a28b299c72da48be4bee70349527e"
+        "GUID:751a28b299c72da48be4bee70349527e",
+        "GUID:478a2357cc57436488a56e564b08d223"
     ],
     "includePlatforms": [
         "Editor"
